# industrial_zone

./: CMakeLists.txt  package.xml
config/: bringup.yaml
hooks/: industrial_zone.dsv.in
launch/: bringup.launch.py  gazebo.launch.py
maps/zona_industrial/: Mapa_v2.yaml
models/box/: model.config  model.sdf
models/box/meshes/: caja.stl
models/conveyor_block/: model.config  model.sdf
models/floor/: model.config  model.sdf
models/floor/meshes/: mesa.stl  suelo.stl
models/shelves/: model.config  model.sdf
models/shelves/meshes/: estanteria.stl
worlds/: industrial_zone.world
